--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Build output
 dist/
