--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "slugify": "^1.6.6",
     "zod": "^4.1.12"
   },
